# anydesign

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/ctx/: known-pitfalls.md
spike/: decision.md  scorecard.json  tokens-stripe.yaml  tokens-tailwind.yaml  tokens-vercel.yaml
src/design_from_url/: __init__.py  __main__.py  aggregator.py  brand_color.py  cli.py  colors.py  component.py  consent.py  constants.py  dark_mode.py  extractor.py  llm.py  preflight.py  prompt_loader.py  prose_retry.py  prose_sections.py  registry.py  renderer.py  run_report.py  schema_fixer.py  template.py  yaml_emit.py
src/design_from_url/prompts/: colors_prose.md  components.md  components_prose.md  dos_donts.md  layout_prose.md  overview.md  role_mapping.md  typography_prose.md
tests/: test_aggregator.py  test_annotate_defaults.py  test_brand_color.py  test_cli_exit_codes.py  test_colors.py  test_component.py  test_dark_mode.py  test_extract_with_session.py  test_extractor_a_styled.py  test_llm.py  test_metadata_complete.py  test_patch_design_md_prose.py  test_preflight.py  test_prompt_loader.py  test_prose_retry.py  test_prose_sections.py  test_registry.py  test_renderer_contract.py  test_run_report.py  test_schema_fixer.py  test_template.py
tests/fixtures/: tailwind_extract.json
tests/fixtures/lint-findings/: bad-hex.json  clean.json  no-yaml.json  parse-error-null.json  ref-undefined.json  spacing-as-list.json
